fixed some checkstyle bugs